Fixed cart page display on small devices

--- a/css/pages/cart.css
+++ b/css/pages/cart.css
@@ -199,3 +199,23 @@
 .payment-form .payment-button {
     display: block;
 }
+
+@media screen and (max-width: 768px) {
+    .cart-item {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .item-image {
+        margin-bottom: 10px;
+        margin-right: 0px;
+    }   
+
+    .item-details {
+        text-align: center;
+    }
+
+    .item-summary {
+        text-align: center;
+    }
+}
